опрос и выравнивание iframe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <div class="all">
     <iframe class="gdocs" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTTkQg02OUMpTCwB0qcnzOzMgtWNfSSi58fhqB07G3uruzewsaC25ALOWI2ym_d3Yx1-FXmTtAgd0kR/pubhtml?widget=true&amp;headers=false"></iframe>
   </div>
+<div class="vote">
+  <h2>
+  <p>Оставь <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5nJka9bBVrwz6_WO2RFRGdJa2SX6xyDMAeL6wOe94DdNpLA/viewform?usp=pp_url&entry.326955045=%D0%9F%D1%80%D0%B8%D0%B2%D0%B5%D1%82,+%D1%82%D1%8B,+%D1%81%D1%83%D0%BA%D0%B0+%D0%BD%D0%B5+%D0%BF%D1%80%D0%B0%D0%B2&entry.879531967=mail@ya.ru"> своё</a> мнение
+  </h2>
+</p>
+</div>
+  <footer>@xennexy<br>
+  <time>2018</time>
+  </footer>
 </body>
 
 </html>
